# edgar-crawler

./: .gitignore  Dockerfile  README.md  pyproject.toml  ratelimit.py  requirements.txt  run.py  setup.py  test_gcs.txt
.zed/: settings.json
edgar_crawler/: items.py  middlewares.py  pipelines.py  settings.py
edgar_crawler/spiders/: exhibit_spider.py  random.py
