[tool.poetry]
name = "edgar-crawler"
version = "0.1.0"
description = ""
authors = ["Chenghao Mou <mouchenghao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
niquests = "^3.4.4"
bs4 = "^0.0.2"
lxml = "^5.1.0"
pandas = "^2.2.0"
loguru = "^0.7.2"
tqdm = "^4.66.1"
urllib3 = "^2.1.0"
pyarrow = "^15.0.0"
requests-ratelimiter = "^0.5.1"
cachier = "^2.2.2"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
